[package]
name = "gbmu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.12.1"
winit_input_helper = "0.14.1"
winit = "^0.28"
egui = "^0.21"
egui-wgpu = "^0.21"
egui-winit = "^0.21"
image = "^0.24"
egui_file = "^0.8"